--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
-Site is under construction!
-
-Mail: mailme@vineethp.me
+<html>
+<head>
+  <title>Vineeth Penugonda - Under Construction</title>
+</head>
+<body>
+<p>Site is under construction!</p>
+</br>
+<p>Mail: mailme@vineethp.me</p>
+</body>
+</html>
